--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "website-1",
+  "name": "TheWedgeSite",
   "version": "0.1.0",
   "homepage": "https://paul-bec2.github.io/TheWedgeSite",
   "private": true,
+  "main": "src/assets/scss/paper-kit.scss",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.5.1",
+    "moment": "^2.30.1",
+    "nouislider": "^15.7.1",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
+    "sass": "^1.72.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -20,7 +31,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "compile-sass": "sass src/assets/scss/paper-kit.scss src/assets/css/paper-kit.css",
+    "minify-sass": "sass src/assets/scss/paper-kit.scss src/assets/css/paper-kit.min.css --style compressed"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "bootstrap": "4.6.2",
     "gh-pages": "^6.1.1"
   }
 }
